# ha-switchbee

./: .gitignore  LICENSE  README.md  hacs.json  info.md  pyproject.toml
.github/workflows/: ci.yml  validate.yml
custom_components/ha_switchbee/: __init__.py  config_flow.py  const.py  coordinator.py  cover.py  entity.py  light.py  manifest.json  mapping.py  models.py  scene.py  switch.py  switchbee_ws.py
custom_components/ha_switchbee/translations/: en.json
docs/: cutover-runbook.md
tests/: conftest.py  fake_cu.py  test_config_flow.py  test_config_flow_schema.py  test_coordinator.py  test_coordinator_internal.py  test_coordinator_poll.py  test_cover_platform.py  test_cu_mac.py  test_entity_base.py  test_light_platform.py  test_mapping.py  test_migrate_adoption.py  test_migrate_apply_orphans.py  test_migrate_apply_writelist.py  test_migrate_backup.py  test_migrate_cli.py  test_migrate_mapping.py  test_migrate_normalize.py  test_migrate_safety_gates.py  test_models.py  test_probe_against_fake_cu.py  test_probe_cli.py  test_scene_platform.py  test_smoke.py  test_switch_platform.py  test_switchbee_ws.py
tools/: __init__.py  migrate.py  probe.py
tools/_migrate/: __init__.py  applier.py  backup.py  device_registry_cleaner.py  homebridge_reader.py  mapper.py  registry_reader.py  report.py  restore_areas.py  safety.py
